move mixins into separate files. change util names. change demo site appearance.

--- a/assets/main.css
+++ b/assets/main.css
@@ -1,3 +1,134 @@
+.ui-table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  empty-cells: show;
+  border: 1px solid #999999;
+}
+.ui-table caption {
+  text-align: center;
+  font-weight: bold;
+}
+.ui-table td,
+.ui-table th {
+  border-width: 0 0 0 1px;
+  margin: 0;
+  overflow: visible;
+}
+.ui-table thead {
+  text-align: left;
+}
+.ui-table caption {
+  color: #000000;
+}
+.ui-table td,
+.ui-table th {
+  border-left: 1px solid #999999;
+}
+.ui-table thead {
+  background: #cccccc;
+  color: #000000;
+}
+.ui-table.striped tr:nth-child(2n-1) td {
+  background-color: #e6e6e6;
+  color: #000000;
+}
+.ui-table.bordered td {
+  border-bottom: 1px solid #999999;
+}
+.ui-table.horizontal th,
+.ui-table.horizontal td {
+  border-width: 0 0 1px 0;
+  border-bottom: 1px solid #999999;
+}
+.ui-table.hover-line > tbody > tr:hover > td,
+.ui-table.hover-line > tbody > tr:hover > th {
+  background-color: #e6e6e6;
+  color: #000000;
+}
+.ui-table caption {
+  padding: 1em 0;
+  font-size: 13px;
+}
+.ui-table td,
+.ui-table th {
+  padding: 0.5em 1em;
+  font-size: 13px;
+}
+.ui-menu {
+  overflow: visible;
+  position: relative;
+}
+.ui-menu > ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+.ui-menu > ul .ui-menu-item {
+  position: relative;
+}
+.ui-menu > ul .ui-menu-item > a {
+  text-decoration: none;
+  display: block;
+}
+.ui-menu > ul .ui-menu-item.disabled {
+  cursor: not-allowed;
+  opacity: 0.4;
+}
+.ui-menu > ul .ui-menu-item.disabled a:hover {
+  background: none;
+}
+.esf-grid-u,
+.ui-u,
+.ui-u-1,
+.ui-u-golden-ratio,
+.ui-u-golden-ratio-1,
+.ui-u-2-2,
+.ui-u-1-2,
+.ui-u-3-3,
+.ui-u-2-3,
+.ui-u-1-3,
+.ui-u-4-4,
+.ui-u-3-4,
+.ui-u-2-4,
+.ui-u-1-4,
+.ui-u-24-24,
+.ui-u-23-24,
+.ui-u-22-24,
+.ui-u-21-24,
+.ui-u-20-24,
+.ui-u-19-24,
+.ui-u-18-24,
+.ui-u-17-24,
+.ui-u-16-24,
+.ui-u-15-24,
+.ui-u-14-24,
+.ui-u-13-24,
+.ui-u-12-24,
+.ui-u-11-24,
+.ui-u-10-24,
+.ui-u-9-24,
+.ui-u-8-24,
+.ui-u-7-24,
+.ui-u-6-24,
+.ui-u-5-24,
+.ui-u-4-24,
+.ui-u-3-24,
+.ui-u-2-24,
+.ui-u-1-24,
+.ui-u-5-5,
+.ui-u-4-5,
+.ui-u-3-5,
+.ui-u-2-5,
+.ui-u-1-5 {
+  display: inline-block;
+  *display: inline;
+  zoom: 1;
+  letter-spacing: normal;
+  word-spacing: normal;
+  vertical-align: top;
+  text-rendering: auto;
+  font-family: "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "微软雅黑", SimSun, "宋体", STXihei, "华文细黑", sans-serif;
+}
 /*! normalize.css v1.1.2 | MIT License | git.io/normalize */
 /* ==========================================================================
        Base
@@ -449,221 +580,289 @@ input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
-/*csslint important:false*/
-/* ==========================================================================
-   Base Extras
-   ========================================================================== */
-/**
- * Extra rules that Pure adds on top of Normalize.css
- */
-/**
- * Always hide an element when it has the `hidden` HTML attribute.
- */
-[hidden] {
-  display: none !important;
+.esf-clearfix,
+.ui-menu.horizontal {
+  *zoom: 1;
 }
-/**
- * Add this class to an image to make it fit within it's fluid parent wrapper while maintaining
- * aspect ratio.
- */
-ui-img {
-  max-width: 100%;
-  height: auto;
-  display: block;
-}
-/**
- * Override normalize with variable values.
- */
-html {
-  font-family: "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "微软雅黑", SimSun, "宋体", STXihei, "华文细黑", sans-serif;
-  background: #fefdfa;
-}
-button[disabled],
-html input[disabled],
-ui-disabled {
-  cursor: not-allowed;
-  opacity: 0.4;
-}
-.clearfix:before,
-.clearfix:after,
+.esf-clearfix:before,
+.esf-clearfix:after,
 .ui-menu.horizontal:before,
 .ui-menu.horizontal:after {
-  content: " ";
   display: table;
+  content: "";
 }
-.clearfix:after,
+.esf-clearfix:after,
 .ui-menu.horizontal:after {
   clear: both;
 }
-.p1 {
-  padding: 10px;
-}
-.pl1 {
-  padding-left: 10px;
-}
-.pb1 {
-  padding-bottom: 10px;
-}
-.pr1 {
-  padding-right: 10px;
-}
-.pt1 {
-  padding-top: 10px;
-}
-.p2 {
-  padding: 20px;
-}
-.pl2 {
-  padding-left: 20px;
-}
-.pb2 {
-  padding-bottom: 20px;
-}
-.pr2 {
-  padding-right: 20px;
-}
-.pt2 {
-  padding-top: 20px;
-}
-.p3 {
-  padding: 30px;
-}
-.pl3 {
-  padding-left: 30px;
-}
-.pb3 {
-  padding-bottom: 30px;
-}
-.pr3 {
-  padding-right: 30px;
-}
-.pt3 {
-  padding-top: 30px;
-}
-.p4 {
-  padding: 40px;
-}
-.pl4 {
-  padding-left: 40px;
-}
-.pb4 {
-  padding-bottom: 40px;
-}
-.pr4 {
-  padding-right: 40px;
-}
-.pt4 {
-  padding-top: 40px;
-}
-.no-pl {
+.ui-pl0 {
   padding-left: 0 !important;
 }
-.no-pb {
+.ui-pb0 {
   padding-bottom: 0 !important;
 }
-.no-pr {
+.ui-pr0 {
   padding-right: 0 !important;
 }
-.no-pt {
+.ui-pt0 {
   padding-top: 0 !important;
 }
-.m1 {
-  margin: 10px;
+.ui-p1 {
+  padding: 10px;
 }
-.ml1 {
-  margin-left: 10px;
+.ui-pl1 {
+  padding-left: 10px;
 }
-.mb1 {
-  margin-bottom: 10px;
+.ui-pb1 {
+  padding-bottom: 10px;
 }
-.mr1 {
-  margin-right: 10px;
+.ui-pr1 {
+  padding-right: 10px;
 }
-.mt1 {
-  margin-top: 10px;
+.ui-pt1 {
+  padding-top: 10px;
 }
-.m2 {
-  margin: 20px;
+.ui-pv1 {
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
-.ml2 {
-  margin-left: 20px;
+.ui-ph1 {
+  padding-left: 10px;
+  padding-right: 10px;
 }
-.mb2 {
-  margin-bottom: 20px;
+.ui-p2 {
+  padding: 20px;
 }
-.mr2 {
-  margin-right: 20px;
+.ui-pl2 {
+  padding-left: 20px;
 }
-.mt2 {
-  margin-top: 20px;
+.ui-pb2 {
+  padding-bottom: 20px;
 }
-.m3 {
-  margin: 30px;
+.ui-pr2 {
+  padding-right: 20px;
 }
-.ml3 {
-  margin-left: 30px;
+.ui-pt2 {
+  padding-top: 20px;
 }
-.mb3 {
-  margin-bottom: 30px;
+.ui-pv2 {
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
-.mr3 {
-  margin-right: 30px;
+.ui-ph2 {
+  padding-left: 20px;
+  padding-right: 20px;
 }
-.mt3 {
-  margin-top: 30px;
+.ui-p3 {
+  padding: 30px;
 }
-.no-ml {
+.ui-pl3 {
+  padding-left: 30px;
+}
+.ui-pb3 {
+  padding-bottom: 30px;
+}
+.ui-pr3 {
+  padding-right: 30px;
+}
+.ui-pt3 {
+  padding-top: 30px;
+}
+.ui-pv3 {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.ui-ph3 {
+  padding-left: 30px;
+  padding-right: 30px;
+}
+.ui-p4 {
+  padding: 40px;
+}
+.ui-pl4 {
+  padding-left: 40px;
+}
+.ui-pb4 {
+  padding-bottom: 40px;
+}
+.ui-pr4 {
+  padding-right: 40px;
+}
+.ui-pt4 {
+  padding-top: 40px;
+}
+.ui-pv4 {
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+.ui-ph4 {
+  padding-left: 40px;
+  padding-right: 40px;
+}
+.ui-ml0 {
   margin-left: 0 !important;
 }
-.no-mb {
+.ui-mb0 {
   margin-bottom: 0 !important;
 }
-.no-mr {
+.ui-mr0 {
   margin-right: 0 !important;
 }
-.no-mt {
+.ui-mt0 {
   margin-top: 0 !important;
 }
-.align-left {
+.ui-m1 {
+  margin: 10px;
+}
+.ui-ml1 {
+  margin-left: 10px;
+}
+.ui-mb1 {
+  margin-bottom: 10px;
+}
+.ui-mr1 {
+  margin-right: 10px;
+}
+.ui-mt1 {
+  margin-top: 10px;
+}
+.ui-mv1 {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.ui-mh1 {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+.ui-m2 {
+  margin: 20px;
+}
+.ui-ml2 {
+  margin-left: 20px;
+}
+.ui-mb2 {
+  margin-bottom: 20px;
+}
+.ui-mr2 {
+  margin-right: 20px;
+}
+.ui-mt2 {
+  margin-top: 20px;
+}
+.ui-mv2 {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.ui-mh2 {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+.ui-m3 {
+  margin: 30px;
+}
+.ui-ml3 {
+  margin-left: 30px;
+}
+.ui-mb3 {
+  margin-bottom: 30px;
+}
+.ui-mr3 {
+  margin-right: 30px;
+}
+.ui-mt3 {
+  margin-top: 30px;
+}
+.ui-mv3 {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+.ui-mh3 {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+.ui-m4 {
+  margin: 40px;
+}
+.ui-ml4 {
+  margin-left: 40px;
+}
+.ui-mb4 {
+  margin-bottom: 40px;
+}
+.ui-mr4 {
+  margin-right: 40px;
+}
+.ui-mt4 {
+  margin-top: 40px;
+}
+.ui-mv4 {
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+.ui-mh4 {
+  margin-left: 40px;
+  margin-right: 40px;
+}
+.ui-align-left {
   text-align: left;
 }
-.align-center {
+.ui-align-center {
   text-align: center;
 }
-.align-right {
+.ui-align-right {
   text-align: right;
 }
-.nowrap {
+.ui-nowrap {
   white-space: nowrap;
 }
-.center-block {
-  display: block;
+.ui-center-block {
+  display: block !important;
   margin-left: auto;
   margin-right: auto;
 }
-.pull-left {
+.ui-fl {
   float: left;
 }
-.pull-right {
+.ui-fr {
   float: right;
 }
-/* The ghost, nudged to maintain perfect centering */
-.vertical-align:before {
+.ui-vertical-align:before {
   content: '';
   display: inline-block;
   height: 100%;
   vertical-align: middle;
   margin-right: -0.25em;
-  /* Adjusts for spacing */
 }
 .ui-block {
   display: block !important;
 }
-.ui-block-center {
-  display: block !important;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+.ui-base-font {
+  font-size: 16px;
+}
+.ui-mini-font {
+  font-size: 13px;
+}
+.ui-small-font {
+  font-size: 14px;
+}
+.ui-large-font {
+  font-size: 18px;
+}
+.ui-big-font {
+  font-size: 20px;
+}
+.ui-huge-font {
+  font-size: 22px;
+}
+.ui-massive-font {
+  font-size: 24px;
+}
+[hidden] {
+  display: none !important;
+}
+html {
+  font-family: "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "微软雅黑", SimSun, "宋体", STXihei, "华文细黑", sans-serif;
+  background: #fefdfa;
 }
 h1,
 h2,
@@ -710,9 +909,6 @@ body {
   font-size: 16px;
   line-height: 1.3;
 }
-p.ui-indent {
-  text-indent: 2em;
-}
 code,
 kbd {
   color: #b34e26;
@@ -730,24 +926,6 @@ pre code {
   border: none;
   background: none;
   padding: 0;
-}
-.ui-divider,
-hr {
-  border-top: 1px solid #e6e6e6;
-  height: 0;
-  overflow: hidden;
-}
-.ui-song {
-  font-family: "Helvetica Neue", Helvetica, Arial, SimSun, "宋体", STSong, "华文宋体", sans-serif;
-}
-.ui-fang-song {
-  font-family: "Helvetica Neue", Helvetica, Arial, FangSong, "仿宋", STFangsong, "华文仿宋", sans-serif;
-}
-.ui-hei {
-  font-family: "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "微软雅黑", SimHei, "黑体", STHeiti, "华文黑体", sans-serif;
-}
-.ui-kai {
-  font-family: "Helvetica Neue", Helvetica, Arial, KaiTi, "楷体", STKaiti, "华文楷体", sans-serif;
 }
 blockquote {
   font-style: italic;
@@ -780,18 +958,35 @@ ul ol,
 ol ol {
   margin-bottom: 0;
 }
+p.ui-indent {
+  text-indent: 2em;
+}
+.ui-divider,
+hr {
+  border-top: 1px solid #e6e6e6;
+  height: 0;
+  overflow: hidden;
+}
+.ui-song {
+  font-family: "Helvetica Neue", Helvetica, Arial, SimSun, "宋体", STSong, "华文宋体", sans-serif;
+}
+.ui-fang-song {
+  font-family: "Helvetica Neue", Helvetica, Arial, FangSong, "仿宋", STFangsong, "华文仿宋", sans-serif;
+}
+.ui-hei {
+  font-family: "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "微软雅黑", SimHei, "黑体", STHeiti, "华文黑体", sans-serif;
+}
+.ui-kai {
+  font-family: "Helvetica Neue", Helvetica, Arial, KaiTi, "楷体", STKaiti, "华文楷体", sans-serif;
+}
 .esf-list-unstyled,
+.ui-list-unstyled,
+.ui-list-inline,
 .ui-dropdown {
   padding-left: 0;
   list-style: none;
 }
-.ui-list-unstyled {
-  padding-left: 0;
-  list-style: none;
-}
 .ui-list-inline {
-  padding-left: 0;
-  list-style: none;
   margin-left: -5px;
 }
 .ui-list-inline > li {
@@ -811,61 +1006,10 @@ ol ol {
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
 }
-.ui-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-  empty-cells: show;
-  border: 1px solid #999999;
-}
-.ui-table caption {
-  text-align: center;
-  font-weight: bold;
-}
-.ui-table td,
-.ui-table th {
-  border-width: 0 0 0 1px;
-  margin: 0;
-  overflow: visible;
-}
-.ui-table thead {
-  text-align: left;
-}
-.ui-table caption {
-  color: #000000;
-}
-.ui-table td,
-.ui-table th {
-  border-left: 1px solid #999999;
-}
-.ui-table thead {
-  background: #cccccc;
-  color: #000000;
-}
-.ui-table.striped tr:nth-child(2n-1) td {
-  background-color: #e6e6e6;
-  color: #000000;
-}
-.ui-table.bordered td {
-  border-bottom: 1px solid #999999;
-}
-.ui-table.horizontal th,
-.ui-table.horizontal td {
-  border-width: 0 0 1px 0;
-  border-bottom: 1px solid #999999;
-}
-.ui-table.hover-line > tbody > tr:hover > td,
-.ui-table.hover-line > tbody > tr:hover > th {
-  background-color: #e6e6e6;
-  color: #000000;
-}
-.ui-table caption {
-  padding: 1em 0;
-  font-size: 13px;
-}
-.ui-table td,
-.ui-table th {
-  padding: 0.5em 1em;
-  font-size: 13px;
+ui-img {
+  max-width: 100%;
+  height: auto;
+  display: block;
 }
 .ui-g {
   letter-spacing: -0.31em;
@@ -1226,58 +1370,6 @@ ol ol {
   margin-left: 20%;
   *margin-left: NaN%;
 }
-.esf-grid-u,
-.ui-u,
-.ui-u-1,
-.ui-u-golden-ratio,
-.ui-u-golden-ratio-1,
-.ui-u-2-2,
-.ui-u-1-2,
-.ui-u-3-3,
-.ui-u-2-3,
-.ui-u-1-3,
-.ui-u-4-4,
-.ui-u-3-4,
-.ui-u-2-4,
-.ui-u-1-4,
-.ui-u-24-24,
-.ui-u-23-24,
-.ui-u-22-24,
-.ui-u-21-24,
-.ui-u-20-24,
-.ui-u-19-24,
-.ui-u-18-24,
-.ui-u-17-24,
-.ui-u-16-24,
-.ui-u-15-24,
-.ui-u-14-24,
-.ui-u-13-24,
-.ui-u-12-24,
-.ui-u-11-24,
-.ui-u-10-24,
-.ui-u-9-24,
-.ui-u-8-24,
-.ui-u-7-24,
-.ui-u-6-24,
-.ui-u-5-24,
-.ui-u-4-24,
-.ui-u-3-24,
-.ui-u-2-24,
-.ui-u-1-24,
-.ui-u-5-5,
-.ui-u-4-5,
-.ui-u-3-5,
-.ui-u-2-5,
-.ui-u-1-5 {
-  display: inline-block;
-  *display: inline;
-  zoom: 1;
-  letter-spacing: normal;
-  word-spacing: normal;
-  vertical-align: top;
-  text-rendering: auto;
-  font-family: "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "微软雅黑", SimSun, "宋体", STXihei, "华文细黑", sans-serif;
-}
 .ui-form fieldset {
   margin: 0;
   padding: .35em 0 .75em;
@@ -1402,10 +1494,10 @@ textarea:focus {
 .ui-input.with-icon.left > .ui-icon {
   -webkit-border-top-left-radius: 4px;
   -moz-border-radius-topleft: 4px;
+  border-top-left-radius: 4px;
   -webkit-border-bottom-left-radius: 4px;
   -moz-border-radius-bottomleft: 4px;
   border-bottom-left-radius: 4px;
-  border-top-left-radius: 4px;
   left: 0;
 }
 .ui-input.with-icon.right > input {
@@ -1414,10 +1506,10 @@ textarea:focus {
 .ui-input.with-icon.right > .ui-icon {
   -webkit-border-top-right-radius: 4px;
   -moz-border-radius-topright: 4px;
+  border-top-right-radius: 4px;
   -webkit-border-bottom-right-radius: 4px;
   -moz-border-radius-bottomright: 4px;
   border-bottom-right-radius: 4px;
-  border-top-right-radius: 4px;
   right: 0;
 }
 .ui-input.with-icon > .ui-icon {
@@ -1529,49 +1621,6 @@ textarea:focus {
 }
 .ui-input.error > input:-ms-input-placeholder {
   color: #ff0000;
-}
-.ui-button {
-  display: inline-block;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  text-align: center;
-  vertical-align: middle;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  cursor: pointer;
-  border: 1px solid transparent;
-  line-height: 2.4em;
-  height: 2.4em;
-  padding: 0 1em;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  color: #ffffff;
-  background-color: #808080;
-  border-color: #808080;
-  font-size: 16px;
-}
-.ui-button:hover {
-  text-decoration: none;
-}
-.ui-button::-moz-focus-inner {
-  padding: 0;
-  border: 0;
-}
-.ui-button:focus {
-  outline: 0;
-}
-.ui-button.icon-only {
-  padding: 0 0.6em;
-}
-.ui-button:hover,
-.ui-button.hover {
-  color: #ffffff;
-  background-color: #666666;
-  border-color: #616161;
 }
 .ui-button.primary {
   color: #ffffff;
@@ -1731,6 +1780,49 @@ textarea:focus {
   border-bottom-left-radius: 0;
   border-top-left-radius: 0;
 }
+.ui-button {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  text-align: center;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  cursor: pointer;
+  border: 1px solid transparent;
+  line-height: 2.4em;
+  height: 2.4em;
+  padding: 0 1em;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  color: #ffffff;
+  background-color: #808080;
+  border-color: #808080;
+  font-size: 16px;
+}
+.ui-button:hover {
+  text-decoration: none;
+}
+.ui-button::-moz-focus-inner {
+  padding: 0;
+  border: 0;
+}
+.ui-button:focus {
+  outline: 0;
+}
+.ui-button.icon-only {
+  padding: 0 0.6em;
+}
+.ui-button:hover,
+.ui-button.hover {
+  color: #ffffff;
+  background-color: #666666;
+  border-color: #616161;
+}
 .ui-dropdown {
   position: relative;
   top: auto;
@@ -1769,7 +1861,6 @@ textarea:focus {
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
 .ui-dropdown > li {
-  font-size: 14px;
   background: #fefdfa;
 }
 .ui-dropdown > li > a {
@@ -1792,29 +1883,6 @@ textarea:focus {
 .ui-dropdown > li.heading {
   padding: 0.5em 1em;
   font-size: 16px;
-}
-.ui-menu {
-  overflow: visible;
-  position: relative;
-}
-.ui-menu > ul {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-.ui-menu > ul .ui-menu-item {
-  position: relative;
-}
-.ui-menu > ul .ui-menu-item > a {
-  text-decoration: none;
-  display: block;
-}
-.ui-menu > ul .ui-menu-item.disabled {
-  cursor: not-allowed;
-  opacity: 0.4;
-}
-.ui-menu > ul .ui-menu-item.disabled a:hover {
-  background: none;
 }
 .ui-menu.hoverable .ui-menu-item .ui-dropdown {
   display: none;
