--- a/src/css/mixins.less
+++ b/src/css/mixins.less
@@ -1,86 +1,8 @@
-// padding & margin
-.make-pad(@factor)  {
-    .p@{factor} {
-        padding: @gutter * @factor;
-    }
-    .pl@{factor} {
-        padding-left: @gutter * @factor;
-    }
-    .pb@{factor} {
-        padding-bottom: @gutter * @factor;
-    }
-    .pr@{factor} {
-        padding-right: @gutter * @factor;
-    }
-    .pt@{factor} {
-        padding-top: @gutter * @factor;
-    }
-}
-
-.make-margin(@factor)  {
-    .m@{factor} {
-        margin: @gutter * @factor;
-    }
-    .ml@{factor} {
-        margin-left: @gutter * @factor;
-    }
-    .mb@{factor} {
-        margin-bottom: @gutter * @factor;
-    }
-    .mr@{factor} {
-        margin-right: @gutter * @factor;
-    }
-    .mt@{factor} {
-        margin-top: @gutter * @factor;
-    }
-}
-
-// border radius
-.border-top-radius(@radius) {
-    border-top-right-radius: @radius;
-    border-top-left-radius: @radius;
-}
-.border-right-radius(@radius) {
-    border-bottom-right-radius: @radius;
-    border-top-right-radius: @radius;
-}
-.border-bottom-radius(@radius) {
-    border-bottom-right-radius: @radius;
-    border-bottom-left-radius: @radius;
-}
-.border-left-radius(@radius) {
-    border-bottom-left-radius: @radius;
-    border-top-left-radius: @radius;
-}
-
-.ellipsis(...) {
-    overflow: hidden;
-}
-.ellipsis() {
-    text-overflow: ellipsis;
-    -o-text-overflow: ellipsis;
-    white-space: nowrap;
-}
-.ellipsis(@line-number) {
-    display: -webkit-box;
-    -webkit-line-clamp: @line-number;
-    -webkit-box-orient: vertical;  
-}
-
-.link-like() {
-  color: @link-color;
-  text-decoration: none;
-
-  &:hover {
-    color: @link-hover-color;
-    text-decoration: underline;
-  }
-}
-
-.center-block() {
-    display: block !important;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-
+@import "./mixins/util.less";
+@import "./mixins/type.less";
+@import "./mixins/menu.less";
+@import "./mixins/button.less";
+@import "./mixins/dropdown.less";
+@import "./mixins/form.less";
+@import "./mixins/grid.less";
+@import "./mixins/input.less";
