--- a/src/css/type.less
+++ b/src/css/type.less
@@ -1,3 +1,13 @@
+[hidden] {
+    display: none !important;
+}
+
+// Override normalize with variable values.
+html {
+    font-family: @default-font-family;
+    background: @body-color;
+}
+
 h1, h2, h3, h4, h5, h6 {
     font-family: @headings-font-family;
     font-weight: @headings-font-weight;
@@ -28,10 +38,6 @@ body {
     line-height: 1.3;
 }
 
-p.@{ui-class-prefix}indent {
-    text-indent: 2em;
-}
-
 code,kbd {
     color: @code-text-color;
     white-space: nowrap;
@@ -50,29 +56,6 @@ pre code {
     border: none;
     background: none;
     padding: 0;
-}
-
-.@{ui-class-prefix}divider, hr {
-    border-top: 1px solid @hr-color;
-    height: 0;
-    overflow:hidden;
-}
-
-// Chinese font families
-.@{ui-class-prefix}song {
-    font-family: @song-font;
-}
-
-.@{ui-class-prefix}fang-song {
-    font-family: @fang-song-font
-}
-
-.@{ui-class-prefix}hei {
-    font-family: @hei-font;
-}
-
-.@{ui-class-prefix}kai {
-    font-family: @kai-font; 
 }
 
 blockquote {
@@ -102,6 +85,33 @@ ol {
     }
 }
 
+p.@{ui-class-prefix}indent {
+    text-indent: 2em;
+}
+
+.@{ui-class-prefix}divider, hr {
+    border-top: 1px solid @hr-color;
+    height: 0;
+    overflow:hidden;
+}
+
+// Chinese font families
+.@{ui-class-prefix}song {
+    font-family: @song-font;
+}
+
+.@{ui-class-prefix}fang-song {
+    font-family: @fang-song-font
+}
+
+.@{ui-class-prefix}hei {
+    font-family: @hei-font;
+}
+
+.@{ui-class-prefix}kai {
+    font-family: @kai-font; 
+}
+
 // Unstyled keeps list items block level, just removes default browser padding and list-style
 .esf-list-unstyled {
     padding-left: 0;
@@ -109,12 +119,12 @@ ol {
 }
 
 .@{ui-class-prefix}list-unstyled {
-    .esf-list-unstyled();
+    &:extend(.esf-list-unstyled);
 }
 
 // Inline turns list items into inline-block
 .@{ui-class-prefix}list-inline {
-  .esf-list-unstyled();
+  &:extend(.esf-list-unstyled);
   margin-left: -5px;
 
   > li {
@@ -132,104 +142,9 @@ ol {
     .ellipsis(3);
 }
 
-// ***********
-// Table
-// ***********
-.table-variant(
-    @caption-text-color,
-    @border-color,
-    @head-background-color,
-    @head-text-color,
-    @striped-background-color,
-    @striped-text-color,
-    @hover-line-background-color,
-    @hover-line-text-color
-) {
-    border: 1px solid @border-color;
-    caption {
-        color: @caption-text-color;
-    }
-    td, th {
-        border-left: 1px solid @border-color;
-    }
-    thead {
-        background: @head-background-color;
-        color: @head-text-color;
-    }
-    &.@{modifier-prefix}striped {
-        tr:nth-child(2n-1) td {
-            background-color: @striped-background-color;
-            color: @striped-text-color;
-        }
-    }
-    &.@{modifier-prefix}bordered {
-        td {
-            border-bottom: 1px solid @border-color;
-        } 
-    }
-    &.@{modifier-prefix}horizontal {
-        th, td {
-            border-width: 0 0 1px 0;
-            border-bottom: 1px solid @border-color;
-        } 
-    }
-    &.@{modifier-prefix}hover-line {
-        > tbody > tr:hover {
-            > td,
-            > th {
-                background-color: @hover-line-background-color;
-                color: @hover-line-text-color; 
-            }
-        }
-    }
-}
-.table-size(
-    @table-caption-padding,
-    @table-caption-font-size,
-    @table-cell-padding,
-    @table-cell-font-size
-) {
-    caption {
-        padding: @table-caption-padding;
-        font-size: @table-caption-font-size;
-    }
-    td, th {
-        padding: @table-cell-padding;
-        font-size: @table-cell-font-size
-    }
-}
-.@{ui-class-prefix}table {
-    border-collapse: collapse;
-    border-spacing: 0;
-    empty-cells: show;
-    caption {
-        text-align: center;
-        font-weight: bold;
-    }
-    td, th {
-        border-width: 0 0 0 1px;
-        margin: 0;
-        // to make ths where the title is really long work
-        overflow: visible; 
-    }
-    thead {
-        text-align: left;
-    }
-
-    .table-variant(
-        @table-caption-text-color,
-        @table-border-color,
-        @table-head-background-color,
-        @table-head-text-color,
-        @table-striped-background-color,
-        @table-striped-text-color,
-        @table-hover-line-background-color,
-        @table-hover-line-text-color
-    );
-    .table-size(
-        @table-caption-padding,
-        @table-caption-font-size,
-        @table-cell-padding,
-        @table-cell-font-size
-    );
+// img
+@{ui-class-prefix}img {
+    max-width: 100%;
+    height: auto;
+    display: block;
 }
