--- a/src/css/utils.less
+++ b/src/css/utils.less
@@ -91,24 +91,24 @@
     display: block !important;
 }
 
-.@{ui-class-prefix}base-font {
+.@{ui-class-prefix}base {
     font-size: @base-font-size;
 }
-.@{ui-class-prefix}mini-font {
+.@{ui-class-prefix}mini {
     font-size: @mini-font-size;
 }
-.@{ui-class-prefix}small-font {
+.@{ui-class-prefix}small {
     font-size: @small-font-size;
 }
-.@{ui-class-prefix}large-font {
+.@{ui-class-prefix}large {
     font-size: @large-font-size;
 }
-.@{ui-class-prefix}big-font {
+.@{ui-class-prefix}big {
     font-size: @big-font-size;
 }
-.@{ui-class-prefix}huge-font {
+.@{ui-class-prefix}huge {
     font-size: @huge-font-size;
 }
-.@{ui-class-prefix}massive-font {
+.@{ui-class-prefix}massive {
     font-size: @massive-font-size;
 }
