--- a/assets/main.css
+++ b/assets/main.css
@@ -91,6 +91,11 @@
 .ui-u-3-4,
 .ui-u-2-4,
 .ui-u-1-4,
+.ui-u-5-5,
+.ui-u-4-5,
+.ui-u-3-5,
+.ui-u-2-5,
+.ui-u-1-5,
 .ui-u-24-24,
 .ui-u-23-24,
 .ui-u-22-24,
@@ -114,12 +119,7 @@
 .ui-u-4-24,
 .ui-u-3-24,
 .ui-u-2-24,
-.ui-u-1-24,
-.ui-u-5-5,
-.ui-u-4-5,
-.ui-u-3-5,
-.ui-u-2-5,
-.ui-u-1-5 {
+.ui-u-1-24 {
   display: inline-block;
   *display: inline;
   zoom: 1;
@@ -836,25 +836,25 @@ input[type="search"]::-webkit-search-decoration {
 .ui-block {
   display: block !important;
 }
-.ui-base-font {
+.ui-base {
   font-size: 16px;
 }
-.ui-mini-font {
+.ui-mini {
   font-size: 13px;
 }
-.ui-small-font {
+.ui-small {
   font-size: 14px;
 }
-.ui-large-font {
+.ui-large {
   font-size: 18px;
 }
-.ui-big-font {
+.ui-big {
   font-size: 20px;
 }
-.ui-huge-font {
+.ui-huge {
   font-size: 22px;
 }
-.ui-massive-font {
+.ui-massive {
   font-size: 24px;
 }
 [hidden] {
@@ -1013,39 +1013,13 @@ ui-img {
 }
 .ui-g {
   letter-spacing: -0.31em;
-  /* Webkit: collapse white-space between units */
   *letter-spacing: normal;
-  /* reset IE < 8 */
   *word-spacing: -0.43em;
-  /* IE < 8: collapse white-space between units */
+  word-spacing: -0.43em;
   text-rendering: optimizespeed;
-  /* Webkit: fixes text-rendering: optimizeLegibility */
-  /*
-    Sets the font stack to fonts known to work properly with the above letter
-    and word spacings. See: https://github.com/yui/pure/issues/41/
-
-    The following font stack makes Pure Grids work on all known environments.
-
-    * FreeSans: Ships with many Linux distros, including Ubuntu
-
-    * Arimo: Ships with Chrome OS. Arimo has to be defined before Helvetica and
-      Arial to get picked up by the browser, even though neither is available
-      in Chrome OS.
-
-    * Droid Sans: Ships with all versions of Android.
-
-    * Helvetica, Arial, sans-serif: Common font stack on OS X and Windows.
-    */
   font-family: FreeSans, Arimo, "Droid Sans", Helvetica, Arial, sans-serif;
-  /*
-    Use flexbox when possible to avoid `letter-spacing` side-effects.
-
-    NOTE: Firefox (as of 25) does not currently support flex-wrap, so the
-    `-moz-` prefix version is omitted.
-    */
   display: -webkit-flex;
   -webkit-flex-flow: row wrap;
-  /* IE10 uses display: flexbox */
   display: -ms-flexbox;
   -ms-flex-flow: row wrap;
 }
@@ -1053,8 +1027,7 @@ ui-img {
    The ".opera-only" selector is used to prevent actual prefocus styling
    and is not required in markup.
 */
-.opera-only :-o-prefocus,
-.ui-g {
+.opera-only :-o-prefocus {
   word-spacing: -0.43em;
 }
 .ui-u-1 {
@@ -1136,6 +1109,46 @@ ui-img {
 }
 .ui-offset-1-4 {
   margin-left: 25%;
+  *margin-left: NaN%;
+}
+.ui-u-5-5 {
+  width: 100%;
+  *width: 99.969%;
+}
+.ui-offset-5-5 {
+  margin-left: 100%;
+  *margin-left: NaN%;
+}
+.ui-u-4-5 {
+  width: 80%;
+  *width: 79.969%;
+}
+.ui-offset-4-5 {
+  margin-left: 80%;
+  *margin-left: NaN%;
+}
+.ui-u-3-5 {
+  width: 60%;
+  *width: 59.969%;
+}
+.ui-offset-3-5 {
+  margin-left: 60%;
+  *margin-left: NaN%;
+}
+.ui-u-2-5 {
+  width: 40%;
+  *width: 39.969%;
+}
+.ui-offset-2-5 {
+  margin-left: 40%;
+  *margin-left: NaN%;
+}
+.ui-u-1-5 {
+  width: 20%;
+  *width: 19.969%;
+}
+.ui-offset-1-5 {
+  margin-left: 20%;
   *margin-left: NaN%;
 }
 .ui-u-24-24 {
@@ -1330,46 +1343,6 @@ ui-img {
   margin-left: 4.16666667%;
   *margin-left: NaN%;
 }
-.ui-u-5-5 {
-  width: 100%;
-  *width: 99.969%;
-}
-.ui-offset-5-5 {
-  margin-left: 100%;
-  *margin-left: NaN%;
-}
-.ui-u-4-5 {
-  width: 80%;
-  *width: 79.969%;
-}
-.ui-offset-4-5 {
-  margin-left: 80%;
-  *margin-left: NaN%;
-}
-.ui-u-3-5 {
-  width: 60%;
-  *width: 59.969%;
-}
-.ui-offset-3-5 {
-  margin-left: 60%;
-  *margin-left: NaN%;
-}
-.ui-u-2-5 {
-  width: 40%;
-  *width: 39.969%;
-}
-.ui-offset-2-5 {
-  margin-left: 40%;
-  *margin-left: NaN%;
-}
-.ui-u-1-5 {
-  width: 20%;
-  *width: 19.969%;
-}
-.ui-offset-1-5 {
-  margin-left: 20%;
-  *margin-left: NaN%;
-}
 .ui-form fieldset {
   margin: 0;
   padding: .35em 0 .75em;
@@ -1460,7 +1433,6 @@ textarea:focus {
 .ui-input {
   display: inline-block;
   position: relative;
-  font-size: 16px;
   font-family: "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "微软雅黑", SimSun, "宋体", STXihei, "华文细黑", sans-serif;
   color: #4d4d4d;
 }
@@ -1559,7 +1531,6 @@ textarea:focus {
   display: table-cell !important;
   vertical-align: top;
   white-space: nowrap;
-  font-size: 0;
 }
 .ui-input.action > .action-container:last-child .ui-button {
   border-top-left-radius: 0px !important;
@@ -1718,42 +1689,6 @@ textarea:focus {
   filter: alpha(opacity=40);
   cursor: not-allowed;
 }
-.ui-button-group.mini .ui-button,
-.ui-input.mini,
-.ui-input.mini .action-container .ui-button,
-.ui-button.mini {
-  font-size: 13px;
-}
-.ui-button-group.ui-small .ui-button,
-.ui-input.small,
-.ui-input.small .action-container .ui-button,
-.ui-button.small {
-  font-size: 14px;
-}
-.ui-button-group.ui-large .ui-button,
-.ui-input.large,
-.ui-input.large .action-container .ui-button,
-.ui-button.large {
-  font-size: 18px;
-}
-.ui-button-group.ui-big .ui-button,
-.ui-input.big,
-.ui-input.big .action-container .ui-button,
-.ui-button.big {
-  font-size: 20px;
-}
-.ui-button-group.ui-huge .ui-button,
-.ui-input.huge,
-.ui-input.huge .action-container .ui-button,
-.ui-button.huge {
-  font-size: 22px;
-}
-.ui-button-group.ui-massive .ui-button,
-.ui-input.massive,
-.ui-input.massive .action-container .ui-button,
-.ui-button.massive {
-  font-size: 24px;
-}
 .ui-button-dropdown-wrap {
   display: inline-block;
   vertical-align: middle;
@@ -1761,24 +1696,35 @@ textarea:focus {
 }
 .ui-button-group {
   display: inline-block;
-  font-size: 0;
+  vertical-align: middle;
 }
 .ui-button-group .ui-button {
   margin-left: -1px;
+  float: left;
 }
 .ui-button-group .ui-button:first-child {
   margin-left: 0px;
 }
 .ui-button-group > .ui-button:not(:first-child):not(:last-child) {
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
   border-radius: 0;
 }
 .ui-button-group > .ui-button:first-child:not(:last-child) {
-  border-bottom-right-radius: 0;
+  -webkit-border-top-right-radius: 0;
+  -moz-border-radius-topright: 0;
   border-top-right-radius: 0;
+  -webkit-border-bottom-right-radius: 0;
+  -moz-border-radius-bottomright: 0;
+  border-bottom-right-radius: 0;
 }
 .ui-button-group > .ui-button:last-child:not(:first-child) {
-  border-bottom-left-radius: 0;
+  -webkit-border-top-left-radius: 0;
+  -moz-border-radius-topleft: 0;
   border-top-left-radius: 0;
+  -webkit-border-bottom-left-radius: 0;
+  -moz-border-radius-bottomleft: 0;
+  border-bottom-left-radius: 0;
 }
 .ui-button {
   display: inline-block;
@@ -1802,7 +1748,6 @@ textarea:focus {
   color: #ffffff;
   background-color: #808080;
   border-color: #808080;
-  font-size: 16px;
 }
 .ui-button:hover {
   text-decoration: none;
@@ -2725,26 +2670,12 @@ a.ui.teal.label:hover:before {
   line-height: 1em;
   outline: none;
   vertical-align: middle;
-  /*--- Font Sizes ---*/
-  font-size: 1em;
   /*--- Box ---*/
   /*--- Inside Label ---*/
   /*--- Focus ---*/
   /*--- Active ---*/
   /*--- Outside Label  ---*/
   /*--- Disabled ---*/
-}
-.ui-checkbox.ui-large,
-.ui-radio.ui-large,
-.ui-slider.ui-large,
-.ui-toggle.ui-large {
-  font-size: 1.125em;
-}
-.ui-checkbox.ui-big,
-.ui-radio.ui-big,
-.ui-slider.ui-big,
-.ui-toggle.ui-big {
-  font-size: 1.25em;
 }
 .ui-checkbox input,
 .ui-radio input,
