--- a/src/css/variable.less
+++ b/src/css/variable.less
@@ -17,7 +17,8 @@
 @body-line-height: 1.3;
 @default-box-border-radius: 4px;
 
-// padding
+// padding, margin base unit
+// e.g: ui-mt1 applies top 10px
 @gutter: 10px;
 
 @default-padding: 10px 16px;
@@ -221,10 +222,3 @@
 @header-z-index: @zindex-navbar;
 @footer-z-index: @zindex-navbar;
 @modal-z-index: @zindex-modal;
-
-//-- Z-index master list
-//
-// Warning: Avoid customizing these values. They're used for a bird's eye view
-// of components dependent on the z-axis and are designed to all work together.
-//
-// Note: These variables are not generated into the Customizer.
